Simplify the Pyramid events
Drop the LoginEvent and LogoutEvent. As far as the main application
is concerned, this stuff is all subsystem specific. The is a breaking
change because the list of personas the client used to rely upon in
the session is now gone. Along with this, drop support for clients
running cold older than v0.2.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,11 @@ Fixes
 
 - The token API returns OAuth errors rather than choking (#1406)
 
+Backwards Incompatibilities
+---------------------------
+
+- Support for clients before v0.2 has been dropped
+
 0.3.0 (2014-08-23)
 ==================
 
