Add myself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Randall Leeds <tilgovi@hypothes.is>
 Kristof Csillag <csillag@hypothes.is>
 Gergely Ujvari <ujvari@hypothes.is>
 Jake Hartnell <jakehartnell@hypothes.is>
+Benjamin Young <bigbluehat@hypothes.is>
