Add URL params to /stream.atom
Just accepts the same URL params as /api/search.

Ensure that the params always contain a "limit" and that it's always
<= 1000.

Also add unit tests for the stream_atom() view callable (there weren't
any)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+Current Development Version (master branch)
+===========================================
+
+- Added support for URL parameters to the Atom feed at ``/stream.atom``.
+  For example: ``/stream.atom?user=seanh`` or
+  ``/stream.atom?user=seanh&tags=foo,bar``.
+
+
 0.4.0 (2015-05-05)
 ==================
 
