Upgrade PDF.js to f6a8110
This is the version in Firefox 39

--- a/h/browser/chrome/content/web/locale/es-MX/viewer.properties
+++ b/h/browser/chrome/content/web/locale/es-MX/viewer.properties
@@ -38,7 +38,7 @@ print.title=Imprimir
 print_label=Imprimir
 download.title=Descargar
 download_label=Descargar
-bookmark.title=Vista actual (copia o abierta en ventana nueva)
+bookmark.title=Vista actual (copiar o abrir en una nueva ventana)
 bookmark_label=Vista actual
 
 # Secondary toolbar and context menu
@@ -140,12 +140,16 @@ page_scale_width=Ancho de página
 page_scale_fit=Ajustar página
 page_scale_auto=Zoom automático
 page_scale_actual=Tamaño real
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{escala}}%
 
 # Loading indicator messages
 loading_error_indicator=Error
 loading_error=Un error ocurrió al cargar el PDF.
 invalid_file_error=Archivo PDF invalido o dañado.
 missing_file_error=Archivo PDF no encontrado.
+unexpected_response_error=Respuesta inesperada del servidor.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
