--- a/h/browser/chrome/content/web/locale/pt-BR/viewer.properties
+++ b/h/browser/chrome/content/web/locale/pt-BR/viewer.properties
@@ -67,8 +67,8 @@ document_properties.title=Propriedades do documento…
 document_properties_label=Propriedades do documento…
 document_properties_file_name=Nome do arquivo:
 document_properties_file_size=Tamanho do arquivo:
-document_properties_kb={{size_kb}}\u202fKB ({{size_b}} bytes)
-document_properties_mb={{size_mb}}\u202fMB ({{size_b}} bytes)
+document_properties_kb={{size_kb}} KB ({{size_b}} bytes)
+document_properties_mb={{size_mb}} MB ({{size_b}} bytes)
 document_properties_title=Título:
 document_properties_author=Autor:
 document_properties_subject=Assunto:
@@ -140,12 +140,15 @@ page_scale_width=Largura da página
 page_scale_fit=Ajustar à janela
 page_scale_auto=Zoom automático
 page_scale_actual=Tamanho real
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
 
 # Loading indicator messages
 loading_error_indicator=Erro
 loading_error=Ocorreu um erro ao carregar o PDF.
 invalid_file_error=Arquivo PDF corrompido ou inválido.
 missing_file_error=Arquivo PDF ausente.
+unexpected_response_error=Resposta inesperada do servidor.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
