--- a/h/browser/chrome/content/web/locale/ca/viewer.properties
+++ b/h/browser/chrome/content/web/locale/ca/viewer.properties
@@ -80,7 +80,7 @@ document_properties_creator=Creador:
 document_properties_producer=Generador de PDF:
 document_properties_version=Versió de PDF:
 document_properties_page_count=Nombre de pàgines:
-document_properties_close=Close
+document_properties_close=Tanca
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -140,12 +140,16 @@ page_scale_width=Amplària de la pàgina
 page_scale_fit=Ajusta la pàgina
 page_scale_auto=Zoom automàtic
 page_scale_actual=Mida real
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Error
 loading_error=S'ha produït un error en carregar el PDF.
 invalid_file_error=El fitxer PDF no és vàlid o està malmès.
 missing_file_error=Falta el fitxer PDF.
+unexpected_response_error=Resposta inesperada del servidor.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
