--- a/h/browser/chrome/content/web/locale/hu/viewer.properties
+++ b/h/browser/chrome/content/web/locale/hu/viewer.properties
@@ -140,12 +140,16 @@ page_scale_width=Oldalszélesség
 page_scale_fit=Teljes oldal
 page_scale_auto=Automatikus nagyítás
 page_scale_actual=Valódi méret
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Hiba
 loading_error=Hiba történt a PDF betöltésekor.
 invalid_file_error=Érvénytelen vagy sérült PDF fájl.
 missing_file_error=Hiányzó PDF fájl.
+unexpected_response_error=Váratlan kiszolgálóválasz.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
