--- a/h/browser/chrome/content/web/locale/nn-NO/viewer.properties
+++ b/h/browser/chrome/content/web/locale/nn-NO/viewer.properties
@@ -146,6 +146,7 @@ loading_error_indicator=Feil
 loading_error=Ein feil oppstod ved lasting av PDF.
 invalid_file_error=Ugyldig eller korrupt PDF fil.
 missing_file_error=Manglande PDF-fil.
+unexpected_response_error=Uventa tenarrespons.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
@@ -160,4 +161,4 @@ password_cancel=Avbryt
 printing_not_supported=Åtvaring: Utskrift er ikkje fullstendig støtta av denne nettlesaren.
 printing_not_ready=Åtvaring: PDF ikkje fullstendig innlasta for utskrift.
 web_fonts_disabled=Vev-fontar er slått av: Kan ikkje bruka innbundne PDF-fontar.
-document_colors_disabled=PDF-dokument har ikkje løyve til å bruka eigne fargar: \'Tillat sider å velja eigne fargar\' er slått av i nettlesaren.
+document_colors_disabled=PDF-dokument har ikkje løyve til å bruka eigne fargar: 'Tillat sider å velja eigne fargar' er slått av i nettlesaren.
