--- a/h/browser/chrome/content/web/locale/pt-PT/viewer.properties
+++ b/h/browser/chrome/content/web/locale/pt-PT/viewer.properties
@@ -140,12 +140,16 @@ page_scale_width=Ajustar à largura
 page_scale_fit=Ajustar à página
 page_scale_auto=Tamanho automático
 page_scale_actual=Tamanho real
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Erro
 loading_error=Ocorreu um erro ao carregar o PDF.
 invalid_file_error=Ficheiro PDF inválido ou danificado.
 missing_file_error=Ficheiro PDF inexistente.
+unexpected_response_error=Resposta inesperada do servidor.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
@@ -160,4 +164,4 @@ password_cancel=Cancelar
 printing_not_supported=Aviso: a impressão não é totalmente suportada por este navegador.
 printing_not_ready=Aviso: o PDF ainda não está totalmente carregado.
 web_fonts_disabled=Os tipos de letra web estão desativados: não é possível utilizar os tipos de letra PDF incorporados.
-document_colors_disabled=Os documentos PDF não permitem a utilização das suas próprias cores: \'Autorizar as páginas a escolher as suas próprias cores\' está desativado no navegador.
+document_colors_disabled=Os documentos PDF não permitem a utilização das suas próprias cores: Autorizar as páginas a escolher as suas próprias cores está desativado no navegador.
