--- a/h/browser/chrome/content/web/locale/te/viewer.properties
+++ b/h/browser/chrome/content/web/locale/te/viewer.properties
@@ -140,12 +140,15 @@ page_scale_width=పేజీ వెడల్పు
 page_scale_fit=పేజీ అమర్పు
 page_scale_auto=స్వయంచాలక జూమ్
 page_scale_actual=యథార్ధ పరిమాణం
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
 
 # Loading indicator messages
 loading_error_indicator=దోషం
 loading_error=PDF లోడవుచున్నప్పుడు వొక దోషం యెదురైంది.
 invalid_file_error=చెల్లని లేదా పాడైన PDF ఫైలు.
 missing_file_error=దొరకని PDF ఫైలు.
+unexpected_response_error=అనుకోని సేవిక స్పందన.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
