--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,22 @@
+0.7.3 (2015-09-22)
+==================
+
+Bug fixes
+---------
+
+- Fix annotation in IE10.
+
+Features
+--------
+
+- New and improved Dockerfile built on Alpine Linux, resulting in a
+  substantially smaller built image (down to 250MB from ~750MB).
+
+- Remove the need to patch the global window object (upgrade to dom-anchor-*
+  v2.0.0).
+
+- Added a stream RSS feed at `/stream.rss`.
+
 0.7.2 (2015-08-14)
 ==================
 
