--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,12 @@
+0.7.19 (2015-10-28)
+==================
+
+Bug fixes
+---------
+
+- Fix a problem where an incorrect search query was sent to our server due to
+  semicolons in the page URL (6513184).
+
 0.7.9 (2015-10-28)
 ==================
 
