--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,14 @@
+0.7.12 (2015-11-03)
+===================
+
+Bug fixes
+---------
+
+- Fix a couple of small display issues (#2704, #2710).
+
+- Fix an issue where badge URLs were not correctly encoded before being sent to
+  the server (#2709).
+
 0.7.11 (2015-11-02)
 ===================
 
