--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+0.7.13 (2015-11-03)
+===================
+
+Bug fixes
+---------
+
+- Fix a broken reference within our code (502e8df).
+
 0.7.12 (2015-11-03)
 ===================
 
