--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+0.8.4 (2015-12-08)
+==================
+
+Bug fixes
+---------
+
+- Fix a crash when rendering /robots.txt (e1c6021).
+
 0.8.3 (2015-12-08)
 ==================
 
