--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+0.8.5 (2015-12-08)
+==================
+
+Bug fixes
+---------
+
+- Fix a blocker bug preventing annotations from being created (3d014fc).
+
 0.8.4 (2015-12-08)
 ==================
 
