--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+Unreleased
+==========
+
+Bug fixes
+---------
+
+- Fix broken standalone annotation pages for replies (#2786).
+
 0.8.5 (2015-12-08)
 ==================
 
