Clear selection before creating new annotation
Clear any selection that exists in the sidebar before creating a new
annotation. Otherwise the new annotation with its form open for the user
to type in won't be visible because it's not part of the selection.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,15 @@
+Unreleased
+==========
+
+Features
+--------
+
+- Clear any selection that exists in the sidebar before creating a new
+  annotation. Fixes a usability issue that the new annotation with its form
+  open for the user to type in wouldn't be visible because it wasn't part of
+  the selection. (#2817)
+
+
 0.8.7 (2015-12-18)
 ==================
 
