Fix annotation thread collapsing
This was broken by all the recent annotation directive refactoring:
annotation threads are now shown uncollapsed by default (should be
collapsed) and the buttons to collapse/uncollapse them do nothing.

vm/ctrl.editing became a method vm/ctrl.editing() but some code in the
link function wasn't updated.

This fixes them to be collapsed by default and gets the
collapse/uncollapse buttons working but I'm not sure if the collapse
behaviour is correct with nested threads.

Fixes #2823.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,12 @@
+Unreleased
+==========
+
+Bug fixes
+---------
+
+- Fix a bug where threads were being shown uncollapsed instead of collapsed
+  initially, and the collapse/uncollapse buttons didn't work (#2855)
+
 0.8.9 (2016-01-11)
 ==================
 
