Remove the static blocklist
The configuration option for defining a static blocklist of sites
on which Hypothesis should not load has never been used and
we're not anticipating doing so.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,9 @@ Miscellanea
   a long way behind Chrome, with the intention of replacing it with
   one based on WebExtensions in the near future.
 
+- Removed the option to configure a static blocklist of URLs on which
+  the Hypothesis client would refuse to load.
+
 - Strip WebTrends "WT.*" query parameters as part of URI normalization (#2862).
 
 
