--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
-Unreleased
-==========
+0.8.14 (2016-02-12)
+===================
 
 Bug fixes
 ---------
@@ -10,6 +10,9 @@ Bug fixes
 - Fix a bug where the "sidebar tutorial" wouldn't correctly dismiss (#2925).
 
 - Ensure that requests to the badge API correctly send a cookie (#2929).
+
+- Numerous small fixes to the Hypothesis client and Chrome extension (#2933,
+  #2941, #2947).
 
 Miscellanea
 -----------
